[Added Mongo database and logic to store temperature data every 15 min]

--- a/apiintegrationservice/src/main/resources/application.properties
+++ b/apiintegrationservice/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.application.name=apiintegrationservice
 api.air-quality.base-url = https://api.meteomatics.com
 api.air-quality.username =
 api.air-quality.password = 
+
+
+#Local MongoDB config
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=root
+spring.data.mongodb.database=ais
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
