[Parked scheduler code and redirect api directly]

--- a/apiintegrationservice/src/main/resources/application.properties
+++ b/apiintegrationservice/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=apiintegrationservice
 # Meteomatics API
 api.air-quality.base-url = https://api.meteomatics.com
 api.air-quality.username =
-api.air-quality.password = 
+api.air-quality.password =
 
 
 #Local MongoDB config
@@ -12,3 +12,7 @@ api.air-quality.password =
 spring.data.mongodb.database=ais
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+
+# Test Url with parameters
+#   https://api.meteomatics.com/2024-10-23T00:00:00Z/t_2m:C,wind_speed_10m:ms,wind_dir_10m:d,wind_gusts_10m_1h:kmh,t_max_2m_24h:C,t_min_2m_24h:C,msl_pressure:hPa,precip_1h:mm,precip_24h:mm,uv:idx/13.081568,77.625137/json
+# uv:idx,sunrise:sql,sunset:sql
